Put links to blog pages on the index page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <h1>The Story of Madeleine and how she created a website</h1>
     <h2>Or a lesson in frustration and insanity</h2>
     <h3>25 May 2016</h3>
-    
+    <<ul>
+      <li><a href="/c1-reflection-blog.html">Cultural musings</a></li>
+      <<li><a href="/time-and-habits.html">Time and habits thoughts</a></li>
+    </ul>
     <p>
       This is the basic page content - a paragraph of great glory.
     </p>
