--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <h2>Or a lesson in frustration and insanity</h2>
     <h3>25 May 2016</h3>
     <<ul>
-      <li><a href="/c1-reflection-blog.html">Cultural musings</a></li>
-      <<li><a href="/time-and-habits.html">Time and habits thoughts</a></li>
+      <li><a href="/blog/c1-reflection-blog.html">Cultural musings</a></li>
+      <<li><a href="/blog/time-and-habits.html">Time and habits thoughts</a></li>
     </ul>
     <p>
       This is the basic page content - a paragraph of great glory.
