Fix links to blog pages on the index page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3>25 May 2016</h3>
     <<ul>
       <li><a href="/blog/c1-reflection-blog.html">Cultural musings</a></li>
-      <<li><a href="/blog/time-and-habits.html">Time and habits thoughts</a></li>
+      <li><a href="/blog/time-and-habits-blog.html">Time and habits thoughts</a></li>
     </ul>
     <p>
       This is the basic page content - a paragraph of great glory.
