Give colour properties to CSS

--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
   </head>
   
   <body>
-    <h1>The Story of Madeleine and how she created a website</h1>
-    <h2>Or a lesson in frustration and insanity</h2>
+    <h1>The Story of how Madeleine Created a Website</h1>
+    <h2>or A Lesson in Frustration and Dark Mutterings</h2>
     <h3>25 May 2016</h3>
     <ul>
-      <li><a href="/blog/c1-reflection-blog.html">Cultural musings</a></li>
-      <li><a href="/blog/time-and-habits-blog.html">Time and habits thoughts</a></li>
+      <li><a href="/blog/c1-reflection-blog.html">Musings from the 'culture' talk</a></li>
+      <li><a href="/blog/time-and-habits-blog.html">Time management thoughts</a></li>
     </ul>
     <p>
-      This is the basic page content - a paragraph of great glory.
+      This is the very beginnings of a website - a first page, not in itself a great wonder of the world, but significant nonetheless. Watch this space. And mind the gap.
     </p>
-    <p>
-      And another glorious paragraph.
-    </p>
+    
       
     <!-- this is a comment. -->
   
