Add text to mark revisiting

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>The Story of how Madeleine Created a Website</h1>
     <h2>or A Lesson in Frustration and Dark Mutterings</h2>
     <h3>25 May 2016</h3>
+    <<p>The lesson of ice cream eating burglars</p>
     <ul>
       <li><a href="/blog/c1-reflection-blog.html">Musings from the 'culture' talk</a></li>
       <li><a href="/blog/time-and-habits-blog.html">Time management thoughts</a></li>
