Add tech blog t2 and update index page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="menu-ish">
           <h2>Blog posts</h2>
               <ul>
+                <li><a href="/blog/t2-html-css-dom-p1.html">Emotional intelligence</a></li>
                 <li><a href="/blog/c2-emotional-intelligence.html">Emotional intelligence</a></li>
                 <li><a href="/blog/c1-reflection-blog.html">Culture talk musings</a></li>
                 <li><a href="/blog/time-and-habits-blog.html">Time management thoughts</a></li>
