Add semantic html and placeholder content

--- a/index.html
+++ b/index.html
@@ -1,11 +1,118 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-    <meta charset="UTF-8">
+<head>
+  <title></title>
+  <meta charset="UTF-8">
     
-  </head>
-  <body>
+</head>
+<body>
+<!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="top navigation section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <a class="button button-primary" href="http://getskeleton.com">projects</a>
+          <a class="button button-primary" href="http://getskeleton.com">blog</a>
+          <a class="button button-primary" href="http://getskeleton.com">contact</a>
+        </div>
+      </div>
+    </div>
+   </div> 
+
+  <div class="banner section">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <img src="http://placekitten.com/760/150" alt="placeholder for banner">
+          <h1>Madeleine Rashbrooke</h1>
+          <h2>baby web developer</h2>
+        </div>
+      </div>
+    </div>
+   </div> 
+
+  <div class="section project 1">
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <img src="http://placekitten.com/250/150" alt="placeholder for project">
+          <h3>Project 1</h3>
+          <p>A concise description of the project and why you should find out more...</p>
+        </div>
+      </div>
+    </div>
+   </div> 
+
+  <div class="section project 2">
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <img src="http://placekitten.com/250/150" alt="placeholder for project">
+          <h3>Project 2</h3>
+          <p>A concise description of the project and why you should find out more...</p>
+        </div>
+      </div>
+    </div>
+   </div> 
+
+  <div class="section project 3">
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <img src="http://placekitten.com/250/150" alt="placeholder for project">
+          <h3>Project 3</h3>
+          <p>A concise description of the project and why you should find out more...</p>
+        </div>
+      </div>
+    </div>
+   </div> 
+
+  <div class="section project 4">
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <img src="http://placekitten.com/250/150" alt="placeholder for project">
+          <h3>Project 2</h3>
+          <p>A concise description of the project and why you should find out more...</p>
+        </div>
+      </div>
+    </div>
+   </div>   
   
-  </body>
+
+  <div class="section introductory text">
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <h2>Who is Madeleine?</h2>
+          <p>A scientist-turned-communicator having a midlife crisis and becoming a web developer (she hopes)</p>
+        </div>
+      </div>
+    </div>
+  </div> 
+
+  <div class="section blog list">
+    <div class="container">
+      <div class="row">
+        <div class="col-4">
+          <h2>Maddy's musings</h2>
+          <p>A scientist-turned-communicator having a midlife crisis and becoming a web developer (she hopes)</p>
+        </div>
+      </div>
+    </div>
+  </div> 
+
+  <div class="section footer">
+    <div class="container">
+      <div class="row">
+        <div row="col-12">
+          <p>placeholder text for what will go in the footer</p>
+        </div>
+      </div>
+    </div>
+  </div>
+      
+</body>    
+
 </html>
