--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Madeleine's kitten page</title>
   <meta charset="UTF-8">
 
   <!-- CSS
@@ -72,6 +72,7 @@
             <h5>Of mice and kittens</h5>
             <p>How to achieve the revolution one kitten at a time</p>
             <ul>
+              <li><a href="/blog/t3-design-to-web-blog.html">Technical blog: implementing a framework design</li>
               <li><a href="/blog/t2-html-css-dom-p2.html">Technical blog: Udacity 2: grid design</a></li>
               <li><a href="/blog/t2-html-css-dom-p1.html">Technical blog: Udacity 1: html, css etc</a></li>
               <li><a href="/blog/c2-emotional-intelligence.html">Emotional intelligence</a></li>
