Add assign 5 tech blog, add link to index page

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <h5>Of mice and kittens</h5>
             <p>How to achieve the revolution one kitten at a time</p>
             <ul>
+              <li><a href="/blog/t5-problem-solving.html">Technical blog: Problem-solving</li>
               <li><a href="/blog/t4-javascript-basics.html">Technical blog: JavaScript basics</li>
               <li><a href="/blog/t3-design-to-web-blog.html">Technical blog: implementing a framework design</li>
               <li><a href="/blog/t2-html-css-dom-p2.html">Technical blog: Udacity 2: grid design</a></li>
