--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
               <li><a href="/blog/t3-design-to-web-blog.html">Technical blog: implementing a framework design</li>
               <li><a href="/blog/t2-html-css-dom-p2.html">Technical blog: Udacity 2: grid design</a></li>
               <li><a href="/blog/t2-html-css-dom-p1.html">Technical blog: Udacity 1: html, css etc</a></li>
+              <li><a href="/blog/c5-self-confidence.html">Self-confidence</li>
               <li><a href="/blog/c4-daily-mindfulness.html">Daily Mindfulness</li>
               <li><a href="/blog/c3-meditation-process.html">Meditation</a></li>
               <li><a href="/blog/c2-emotional-intelligence.html">Emotional intelligence</a></li>
